# Schedule

./: .gitignore  mail_sender.py  pyproject.toml  schedule.py
