[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["Enilesi <miriam.iseline@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
